--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,10 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="{{ site.km }}">{{ site.name }}</a></li>
         </ul>
       </div>
 
@@ -19,7 +16,11 @@
             {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
+        </ul>
+      </div>
 
+      <div class="footer-col footer-col-3">
+        <ul class="social-media-list">
           {% if site.twitter_username %}
           <li>
             {% include icon-twitter.html username=site.twitter_username %}
@@ -28,9 +29,6 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
     </div>
 
   </div>
