--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,3 +204,15 @@ pre {
         }
     }
 }
+
+/**
+ * Kodemaker
+ */
+.kodemaker {
+    font-family: "HelveticaNeue-CondensedBlack","HelveticaNeueBlackCondensed","HelveticaNeue-Black-Condensed","Helvetica Neue Black Condensed","HelveticaNeueBlack","HelveticaNeue-Black","Helvetica Neue Black","Impact","HelveticaNeue","Helvetica Neue","TeXGyreHerosCnBlack","Helvetica","Tahoma","Geneva","Arial Narrow","Arial",sans-serif;
+    font-stretch: condensed;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 1;
+}
