--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -132,11 +132,13 @@
 }
 
 .footer-col-2 {
+    text-align: center;
     width: -webkit-calc(30% - (#{$spacing-unit} / 2));
     width:         calc(30% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
+    text-align: right;
     width: -webkit-calc(35% - (#{$spacing-unit} / 2));
     width:         calc(35% - (#{$spacing-unit} / 2));
 }
