--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -142,7 +142,7 @@
     width: -webkit-calc(35% - (#{$spacing-unit} / 2));
     width:         calc(35% - (#{$spacing-unit} / 2));
 }
-
+/**
 @include media-query($on-laptop) {
     .footer-col-1,
     .footer-col-2 {
@@ -159,11 +159,11 @@
 @include media-query($on-palm) {
     .footer-col {
         float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+        width: -webkit-calc(100% - (#{$spacing-unit}));
+        width:         calc(100% - (#{$spacing-unit}));
     }
 }
-
+*/
 
 
 /**
