--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,9 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include comments.html %}
 
+    {% include footer.html %}
   </body>
 
 </html>
